--- a/src/themes/spark/layouts/partials/head.html
+++ b/src/themes/spark/layouts/partials/head.html
@@ -3,10 +3,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 
-  <title>{{ .Title }}</title>
+  <title>{{ .Title }} | Sparkfabrik </title>
 
   <meta name="author" content="{{ .Site.Author.name }}" />
-  
+
   {{ if .Description }}
   <meta name="description" content="{{ .Description }}">
   {{ end }}
@@ -21,11 +21,11 @@
   <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" />
   <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" />
   <link rel="stylesheet" href="{{ .Site.BaseURL }}css/rouge.css" />
-  
+
   <!-- Facebook OpenGraph tags -->
   <meta property="og:title" content="{{ .Title }}" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="{{ .URL }}/" />
   <meta property="og:image" content="{{ .Site.Params.logo }}" />
-  
+
 </head>
