--- a/src/themes/spark/static/css/main.css
+++ b/src/themes/spark/static/css/main.css
@@ -1,7 +1,4 @@
-@import url("pygment_highlights.css");
-
 /* --- General --- */
-
 body {
   font-family: 'Lora', 'Times New Roman', serif;
   font-size: 18px;
@@ -439,3 +436,18 @@ table tr td :last-child {
   font-size: 36px;
   color: #404040;
 }
+
+pre {
+  display: block;
+  padding: 9.5px;
+  margin: 0 0 10px;
+  font-size: 13px;
+  line-height: 1.42857143;
+  color: #333;
+  word-break: break-all;
+  word-wrap: break-word;
+  background-color: #f5f5f5;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
