--- a/src/themes/spark/layouts/partials/head.html
+++ b/src/themes/spark/layouts/partials/head.html
@@ -21,7 +21,7 @@
   <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" />
   <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" />
 
-  <link rel="stylesheet" href="//cdn.jsdelivr.net/highlight.js/9.2.0/styles/solarized-dark.min.css">
+  <link rel="stylesheet" href="//cdn.jsdelivr.net/highlight.js/9.2.0/styles/gruvbox-dark.min.css">
   <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.2.0/highlight.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.2.0/languages/dockerfile.min.js"></script>
   <script>hljs.initHighlightingOnLoad();</script>
