--- a/src/themes/spark/static/css/main.css
+++ b/src/themes/spark/static/css/main.css
@@ -413,6 +413,16 @@ table tr td :last-child {
   margin-right: 20px;
 }
 
+.team-page .row ul {
+  list-style: none;
+}
+
+.team-page .row a {
+  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  color: black;
+  font-size: 14px;
+}
+
 .row-top-margin {
   margin-top: 25px;
 }
@@ -436,18 +446,3 @@ table tr td :last-child {
   font-size: 36px;
   color: #404040;
 }
-
-pre {
-  display: block;
-  padding: 9.5px;
-  margin: 0 0 10px;
-  font-size: 13px;
-  line-height: 1.42857143;
-  color: #333;
-  word-break: break-all;
-  word-wrap: break-word;
-  background-color: #f5f5f5;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-}
-
