--- a/src/themes/spark/layouts/partials/nav.html
+++ b/src/themes/spark/layouts/partials/nav.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-default navbar-fixed-top navbar-custom">
-  <div class="container-fluid">
+  <div class="container">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#main-navbar">
         <span class="sr-only">Toggle navigation</span>
@@ -7,20 +7,20 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="{{ .Site.BaseURL }}">{{ .Site.Title }}</a>
+      <i class="spark-icon icon-sparkfabrik">&#xe800;</i> <a class="navbar-brand navtitle" href="{{ .Site.BaseURL }}">Tech @ SparkFabrik</a>
     </div>
 
     <div class="collapse navbar-collapse" id="main-navbar">
       <ul class="nav navbar-nav navbar-right">
       {{ range .Site.Menus.main.ByWeight }}
         <li>
-        <a title="{{ .Name }}" href="{{ .URL }}">{{ .Name }}</a>
+        <a title="{{ .Name }}" href="{{ .URL }}">{{ .Name }} </a>
 	      </li>
 	    {{ end }}
       </ul>
     </div>
 
-	<div class="avatar-container">
+	<!--<div class="avatar-container">
 	  <div class="avatar-img-border">
       {{ if isset .Site.Params "logo" }}
           <a title="{{ .Site.Title }}" href="{{ .Site.BaseURL }}">
@@ -29,6 +29,7 @@
       {{ end }}
 	  </div>
 	</div>
+  -->
 
   </div>
 </nav>
