--- a/src/themes/spark/static/css/main.css
+++ b/src/themes/spark/static/css/main.css
@@ -1,4 +1,15 @@
 /* --- General --- */
+@font-face {
+      font-family: 'fontello';
+      src: url('../font/fontello.eot?4337484');
+      src: url('../font/fontello.eot?4337484#iefix') format('embedded-opentype'),
+           url('../font/fontello.woff?4337484') format('woff'),
+           url('../font/fontello.ttf?4337484') format('truetype'),
+           url('../font/fontello.svg?4337484#fontello') format('svg');
+      font-weight: normal;
+      font-style: normal;
+}
+
 body {
   font-family: 'Lora', 'Times New Roman', serif;
   font-size: 18px;
@@ -446,3 +457,44 @@ table tr td :last-child {
   font-size: 36px;
   color: #404040;
 }
+
+.spark-icon
+    {
+      font-family: "fontello";
+      font-style: normal;
+      font-weight: normal;
+      speak: none;
+
+      /*display: inline-block;
+      text-decoration: inherit;
+      width: 1em;
+      margin-right: .2em;
+      text-align: center;*/
+      /* opacity: .8; */
+
+      /* For safety - reset parent styles, that can break glyph codes*/
+      font-variant: normal;
+      text-transform: none;
+
+      /* fix buttons height, for twitter bootstrap */
+/*      line-height: 1em;
+*/
+      /* Animation center compensation - margins should be symmetric */
+      /* remove if not needed */
+      /*margin-left: .2em;*/
+
+      /* You can be more comfortable with increased icons size */
+      /* font-size: 120%; */
+
+      /* Font smoothing. That was taken from TWBS */
+      -webkit-font-smoothing: antialiased;
+      -moz-osx-font-smoothing: grayscale;
+
+      /* Uncomment for 3D effect */
+      /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
+      font-size: 35px;
+      margin-right: -10px;
+      color: #E60000;
+      float:left;
+      margin-left:-17px;
+    }
