--- a/src/themes/spark/layouts/partials/post.html
+++ b/src/themes/spark/layouts/partials/post.html
@@ -16,7 +16,10 @@
   <div class="row">
     <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
 	  {{ .Content }}
-	</div>
+    </div>
+  </div>
+  <div class="row">
+    {{ partial "author.html" . }}
   </div>
 </article>
 
