Pinolo is now author of his own article

--- a/src/themes/spark/layouts/partials/author.html
+++ b/src/themes/spark/layouts/partials/author.html
@@ -1,5 +1,5 @@
 {{ $author := index .Site.Params.Authors .Params.author }}
-<div class="author-block">
+<div class="author-block clearfix">
   <div class="col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2 ">
     <p class="about">About the author</p>
   </div>
