--- a/src/themes/spark/static/css/main.css
+++ b/src/themes/spark/static/css/main.css
@@ -503,7 +503,7 @@ table tr td :last-child {
 /* --- Author block below posts --- */
 
 div.author-block {
-      margin-top: 30px;
+      margin: 30px 0;
 }
 
 div.author-block p.about {
