--- a/src/themes/spark/layouts/partials/head.html
+++ b/src/themes/spark/layouts/partials/head.html
@@ -2,6 +2,8 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+  <link rel="icon" type="image/png" href="http://www.sparkfabrik.com/favicon.png" />
+
   <title>{{ .Title }} | SparkFabrik </title>
 
   <meta name="author" content="{{ .Site.Author.name }}" />
