--- a/src/themes/spark/static/css/spark.css
+++ b/src/themes/spark/static/css/spark.css
@@ -49,3 +49,7 @@ blockquote p {
   float:left;
   margin-left:-17px;
 }
+
+@media only screen and (max-width: 768px) {
+  .spark-icon { margin-left: 0px; }
+}
