refs #37 - added rrssb to show social button to share contents. added facebook, twitter, linkedin

--- a/src/themes/spark/layouts/partials/footer.html
+++ b/src/themes/spark/layouts/partials/footer.html
@@ -97,5 +97,7 @@
 <script src="{{ .Site.BaseURL }}js/jquery-1.11.2.min.js"></script>
 <script src="{{ .Site.BaseURL }}js/bootstrap.min.js"></script>
 <script src="{{ .Site.BaseURL }}js/main.js"></script>
+<!-- share buttons -->
+<script src="{{ .Site.BaseURL }}rrssb/js/rrssb.min.js"></script>
 
 {{ partial "analytics.html" . }}
