--- a/src/themes/spark/layouts/partials/post.html
+++ b/src/themes/spark/layouts/partials/post.html
@@ -18,6 +18,9 @@
 	  {{ .Content }}
     </div>
   </div>
+
+  {{ partial "share.html" . }}
+
   <div class="row">
     {{ partial "author.html" . }}
   </div>
