--- a/src/themes/spark/layouts/partials/head.html
+++ b/src/themes/spark/layouts/partials/head.html
@@ -34,4 +34,7 @@
   <meta property="og:type" content="website" />
   <meta property="og:url" content="{{ .Permalink }}" />
   <meta property="og:image" content="{{ .Site.Params.og_logo }}" />
+
+  <!-- share buttons -->
+  <link rel="stylesheet" href="{{ .Site.BaseURL }}rrssb/css/rrssb.css" />
 </head>
